[package]
name = "abstract_form"
version = "0.1.0"
edition = "2024"

[features]
chrono = ["dep:chrono"]

[dependencies]
backtrace = { version = "0.3.76", features = ["default", "unix-backtrace"] }
chrono = { version = "0.4", optional = true }
error_context = { path = "../error_context" }
itertools = "0.14.0"
snafu = "0.9.X"

[dev-dependencies]
abstract_form_derive = { path = "../abstract_form_derive" }
