[package]
name = "abstract_form"
version = "0.1.0"
edition = "2024"

[features]
default = ["chrono", "axum_gettext"]
chrono = ["dep:chrono"]
axum_gettext = ["dep:axum_gettext"]

[dependencies]
backtrace = { version = "0.3.76", features = ["default", "unix-backtrace"] }
chrono = { version = "0.4", optional = true }
axum_gettext = { path = "../axum_gettext", optional = true }
error_context = { path = "../error_context" }
itertools = "0.14.0"
log = "0.4.29"
snafu = "0.9.*"

[dev-dependencies]
abstract_form_derive = { path = "../abstract_form_derive" }
strum = { version = "0.28.0", features = ["derive"] }
