[package]
name = "abstract_form"
version = "0.1.0"
edition = "2024"

[features]
default = ["chrono", "axum_gettext", "hex_color"]
chrono = ["dep:chrono"]
axum_gettext = ["dep:axum_gettext"]
hex_color = ["dep:hex_color"]

[dependencies]
backtrace = { version = "0.3.76", features = ["default", "unix-backtrace"] }
chrono = { version = "0.4", optional = true }
axum_gettext = { path = "../axum_gettext", optional = true }
error_context = { path = "../error_context" }
hex_color = { version = "3.0", optional = true }
itertools = "0.14.0"
log = "0.4.29"
snafu = "0.9.*"
regex = "1.12"
base64 = "0.22"

[dev-dependencies]
abstract_form_derive = { path = "../abstract_form_derive" }
strum = { version = "0.28.0", features = ["derive"] }
